--- a/demo/demo.css
+++ b/demo/demo.css
@@ -1,23 +1,53 @@
-*,
-*:before,
-*:after {
-    box-sizing: border-box;
-}
-#J_Scroll {
+/*demo1*/
+#J_Scroll1 {
     width: 500px;
-    height: 202px;
-    border-top: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
+    height: 200px;
 }
-#J_Scroll.ZScroll-vertical {
+#J_Scroll1.ZScroll-vertical {
     width: 150px;
     height: 500px;
 }
-#J_Scroll .ZScroll-item {
+#J_Scroll1 .ZScroll-item {
 }
-#J_Scroll .ZScroll-item a {
+#J_Scroll1 .ZScroll-item a {
     display: block;
 }
-#J_Scroll .ZScroll-item img {
+#J_Scroll1 .ZScroll-item img {
+    vertical-align: top;
+}
+
+/*demo2*/
+#J_Scroll2 {
+    width: 500px;
+    height: 200px;
+}
+#J_Scroll2.ZScroll-vertical {
+    width: 150px;
+    height: 500px;
+}
+#J_Scroll2 .ZScroll-item {
+}
+#J_Scroll2 .ZScroll-item a {
+    display: block;
+}
+#J_Scroll2 .ZScroll-item img {
+    vertical-align: top;
+}
+
+/*demo 3*/
+#J_Scroll3 {
+    width: 500px;
+    height: 200px;
+}
+#J_Scroll3.ZScroll-vertical {
+    width: 150px;
+    height: 500px;
+}
+#J_Scroll3 .ZScroll-item {
+}
+#J_Scroll3 .ZScroll-item a {
+    display: block;
+}
+#J_Scroll3 .ZScroll-item img {
     vertical-align: top;
 }
